[package]
name = "serv"
version = "0.1.0"
edition = "2021"

[dependencies]
actix="0.13.5"
actix-web="4.3.1"
actix-multipart = "*"
actix-identity = "0.7.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
dotenvy = "*"
serde = { version = "*", features = ["derive"] }
serde_json = "*"
sqlx = { version = "*", features = ["runtime-tokio-native-tls", "postgres", "macros","chrono","uuid"] }
tokio = { version = "*", features = ["full"] }
jsonwebtoken = "*"
chrono = { version = "*", features = ["serde"] }
argon2 = "*"
rand = "*"  
futures-util = "*"
futures-channel = "*"
uuid = { version = "*", features = ["v4", "serde"] }
actix-web-actors="*"
geoutils="*"
strum="*"
strum_macros="*"
lazy_static="*"
log = "0.4"
env_logger = "*"
futures = "0.3"
reqwest = { version = "*", features = ["json", "multipart"] }
base64 = "*"
sha1 = "*"
mime = "*"
mime_guess = "*"
sanitize-filename = "*"
# Shuttle dependencies
shuttle-runtime = "0.52.0"
shuttle-actix-web = "0.52.0"
shuttle-shared-db = { version = "0.52.0", features = ["postgres"] }
